# TAED2_LuminIA

./: .gitignore  LICENSE  Makefile  README.md  data.dvc  data_pipeline.py  dataset.yaml  dataset_card.md  dvc.yaml  exprepare.py  greatexpectations.py  invalid.yaml  main.py  params.yaml  predict_pipeline.py  prepare.py  pylint.ini  pyproject.toml  pytest.ini  settings.json  test.py  train.py  train_pipeline.py  validate.py
.dvc/: .gitignore  config
data/: raw.dvc
data/processed/: test_images.txt  train_images.txt
data/raw/: test.txt  train.txt  ts.cache
docs/: dataset_card.md  mkdocs.yml  model_card.md
docs/docs/: index.md
frontend/trafficsigns/: package-lock.json  package.json
frontend/trafficsigns/app/: globals.css  layout.tsx  page.tsx
gx/: great_expectations.yml  gx_setup.py
gx/expectations/: .ge_store_backend_id  image_validation_suite.json
gx/uncommitted/: config_variables.yml
gx/uncommitted/validations/: .ge_store_backend_id
metrics/: emissions.csv  scores.json
mlruns/0/: meta.yaml
mlruns/911971199608222016/: meta.yaml
mlruns/911971199608222016/00ad0a6fcd6d41fb8e863eb0f8b90310/: meta.yaml
mlruns/911971199608222016/02f831cc24e346c9968fb63407dc5fa8/: meta.yaml
mlruns/911971199608222016/0a22d076b95f48b792c4e59669c49d53/: meta.yaml
mlruns/911971199608222016/0f80e83f67eb4dfd8779eb66a277cc5e/: meta.yaml
mlruns/911971199608222016/12e866043a26495193344418dc62fe17/: meta.yaml
mlruns/911971199608222016/179f1e77f01d4a098da889e71c07b38c/: meta.yaml
mlruns/911971199608222016/182eed36e31d4d509aa813b370829f07/: meta.yaml
mlruns/911971199608222016/18c694cfb37a4bf797ca1e8d35b679c1/: meta.yaml
mlruns/911971199608222016/18f8b0a97800476ea372e6984e76c302/: meta.yaml
mlruns/911971199608222016/19517bed11f649e58d43a102c6dad97e/: meta.yaml
mlruns/911971199608222016/1b8c6f602ec245a78c4711f1891bb649/: meta.yaml
mlruns/911971199608222016/23e68a48c2d7449297b5903a951ab142/: meta.yaml
models/: .gitignore  yolov3_ts_train.cfg
scripts/: train.py
src/: config.py  utils.py
src/app/: api.py  app.py  test_api.py
src/config/: config.py
src/features/: deepchecks_validation.py  evaluate.py  prepare.py  train.py
src/metrics/: emissions.csv  scores.json
src/models/: dataset.yaml  evaluate.py  gaissa.py  test.py  train.py
src/taed2_luminia/: __init__.py  dataset.py  features.py
src/validation/: deepchecks_validation.py
taed2/: pyproject.toml
taed2_luminia/: plots.py
taed2_luminia/modeling/: predict.py  train.py
tests/: deepchecks_validation.py  prova.py  test_deepchecks_validation.py  test_evaluate.py  test_models.py  test_prepare.py  test_train.py  validate.py
tests/gx/: gx_context_configuration.py  gx_validate_data.py
(+179 files in other folders)
