[project]
name = "taed2_luminia"
version = "0.0.1"
description = "Traffic signs detection using YOLOv8"
authors = [
  { name = "LuminIA" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["taed2_luminia"]
force_sort_within_sections = true

[tool.poetry]
name = "taed2-luminia"
version = "0.1.0"
description = "Traffic signs detection using YOLOv8"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
dvc = "^3.55.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.7"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
